css: fix the h1 jerking when loading and hide the current navigation on smaller screens

--- a/main.css
+++ b/main.css
@@ -89,6 +89,7 @@ body {
   max-width: 100%;
   text-align: center;
   margin-top: 150px;
+  padding: 0 10px;
 }
 
 .h1-inner-container {
@@ -193,6 +194,7 @@ body {
 }
 
 .navigation {
+  display: none;
   position: fixed;
   right: 100px;
   top: 50%;
@@ -355,5 +357,9 @@ h2 {
     margin-top: 200px;
     max-width: 620px;
     text-align: initial;
+  }
+
+  .navigation {
+    display: block;
   }
 }
